--- a/dailyFresh/templates/base_foot.html
+++ b/dailyFresh/templates/base_foot.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
     {% block head %}{% endblock head %}
 </head>
 <body>
