--- a/dailyFresh/templates/df_user/login.html
+++ b/dailyFresh/templates/df_user/login.html
@@ -1,5 +1,5 @@
 {% extends 'base_foot.html' %}
-{% block head %}
+{% block judge_login %}
     <script>
     $(function () {
         name_error = false;
@@ -33,7 +33,7 @@
 
     })
     </script>
-{% endblock head %}
+{% endblock judge_login %}
 {% block body %}
 	<div class="login_top clearfix">
 		<a href="index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
