--- a/dailyFresh/templates/df_user/user_center_info.html
+++ b/dailyFresh/templates/df_user/user_center_info.html
@@ -1,4 +1,4 @@
-{% extends 'base_top.html' %}
+{% extends 'base_left.html' %}
 {% block right_content %}
 	<div class="right_content clearfix">
 				<div class="info_con clearfix">
@@ -6,7 +6,7 @@
 						<ul class="user_info_list">
 							<li><span>用户名：</span>{{ uname }}</li>
 							<li><span>电子邮箱：</span>{{ email }}</li>
-							<li><span>联系地址：</span>北京市昌平区</li>
+							<li><span>联系地址：</span>{{ address }}</li>
 						</ul>
 				</div>
 
