--- a/dailyFresh/templates/base_foot.html
+++ b/dailyFresh/templates/base_foot.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>{{ title }}天天生鲜</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
-	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.cookie.js"></script>
-    {% block head %}{% endblock head %}
-</head>
-<body>
-    {% block body %}
-    {% endblock body %}
-<div class="footer no-mp">
+{% extends 'base.html' %}
+{% block foot %}
+    <div class="footer no-mp">
 		<div class="foot_link">
 			<a href="#">关于我们</a>
 			<span>|</span>
@@ -25,6 +13,4 @@
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-
-</body>
-</html>
+{% endblock foot %}
