--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -1,24 +1,30 @@
 {% extends 'base_foot.html' %}
-{% block head %}
+{% block judge_login %}
     <script>
-    $(document).ready(function(){
-        var path= location.pathname;
-        $('a.active').removeClass('active');
-        $("a[href='"+path+"']").addClass('active');
+    $(document).ready(function () {
+        if($.cookie('uname')){
+            $(".header .fr .fl:nth-child(1)").removeClass("login_info").addClass("login_btn");
+            $(".header .fr .fl:nth-child(2)").removeClass("login_btn").addClass("login_info");
+        }else{
+            $(".header .fr .fl:nth-child(2)").removeClass("login_info").addClass("login_btn");
+            $(".header .fr .fl:nth-child(1)").removeClass("login_btn").addClass("login_info");
+        }
     });
     </script>
-{% endblock head %}
-{% block body %}
+{% endblock judge_login %}
+{% block top %}
     <div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-                <div class="login_btn fl">
-{#				<div class="login_info fl">#}
+{#                <div class="login_btn fl">#}
+				<div class="login_info fl">
 					欢迎您：<em>{{ uname }}</em>
+                    <span>|</span>
+                    <a href="/user/logout/">退出</a>
 				</div>
-{#				<div class="login_btn fl">#}
-                <div class="login_info fl">
+				<div class="login_btn fl">
+{#                <div class="login_info fl">#}
 					<a href="/user/login">登录</a>
 					<span>|</span>
 					<a href="/user/register">注册</a>
@@ -36,22 +42,23 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
+		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+        {% if page_name == 1 %}
+		    <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;{{ title }}</div>
+		    <div class="search_con fr">
+			    <input type="text" class="input_text fl" name="" placeholder="搜索商品">
+			    <input type="button" class="input_btn fr" name="" value="搜索">
+		    </div>
+        {% endif %}
+        {% if guest_cart == 1 %}
+            <div class="search_con fl">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
-	</div>
-    <div class="main_con clearfix">
-        <div class="left_menu_con clearfix">
-			<h3>用户中心</h3>
-			<ul>
-				<li><a href="/user/info/">· 个人信息</a></li>
-				<li><a href="/user/order/">· 全部订单</a></li>
-				<li><a href="/user/site/" class="active">· 收货地址</a></li>
-			</ul>
+		    <div class="guest_cart fr">
+			<a href="#" class="cart_name fl">我的购物车</a>
+			<div class="goods_count fl" id="show_count">1</div>
 		</div>
-        {% block right_content %} {% endblock right_content %}
-    </div>
-{% endblock body %}
+        {% endif %}
+	</div>
+{% endblock top %}
