--- a/dailyFresh/templates/df_user/user_center_order.html
+++ b/dailyFresh/templates/df_user/user_center_order.html
@@ -1,4 +1,4 @@
-{% extends 'base_top.html' %}
+{% extends 'base_left.html' %}
 {% block right_content %}
     <div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
