--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -1,34 +1,35 @@
 {% extends 'base_foot.html' %}
 {% block judge_login %}
-    <script>
-    $(document).ready(function () {
-        if($.cookie('uname')){
-            $(".header .fr .fl:nth-child(1)").removeClass("login_info").addClass("login_btn");
-            $(".header .fr .fl:nth-child(2)").removeClass("login_btn").addClass("login_info");
-        }else{
-            $(".header .fr .fl:nth-child(2)").removeClass("login_info").addClass("login_btn");
-            $(".header .fr .fl:nth-child(1)").removeClass("login_btn").addClass("login_info");
-        }
-    });
-    </script>
+{#    <script>#}
+{#    $(document).ready(function () {#}
+{#        if($.session.user_name){#}
+{#            $(".header .fr .fl:nth-child(1)").removeClass("login_info").addClass("login_btn");#}
+{#            $(".header .fr .fl:nth-child(2)").removeClass("login_btn").addClass("login_info");#}
+{#        }else{#}
+{#            $(".header .fr .fl:nth-child(2)").removeClass("login_info").addClass("login_btn");#}
+{#            $(".header .fr .fl:nth-child(1)").removeClass("login_btn").addClass("login_info");#}
+{#        }#}
+{#    });#}
+{#    </script>#}
 {% endblock judge_login %}
 {% block top %}
     <div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-{#                <div class="login_btn fl">#}
+                {% if request.session.user_name|default:'' != ''  %}
 				<div class="login_info fl">
-					欢迎您：<em>{{ uname }}</em>
+					欢迎您：<em>{{ request.session.user_name }}</em>
                     <span>|</span>
                     <a href="/user/logout/">退出</a>
 				</div>
+                {% else %}
 				<div class="login_btn fl">
-{#                <div class="login_info fl">#}
 					<a href="/user/login">登录</a>
 					<span>|</span>
 					<a href="/user/register">注册</a>
 				</div>
+                {% endif %}
 				<div class="user_link fl">
 					<span>|</span>
 					<a href="/user/info">用户中心</a>
@@ -56,8 +57,8 @@
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		    <div class="guest_cart fr">
-			<a href="#" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">1</div>
+			<a href="/user/cart/" class="cart_name fl">我的购物车</a>
+			<div class="goods_count fl" id="show_count">0</div>
 		</div>
         {% endif %}
 	</div>
