--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -58,7 +58,7 @@
 		</div>
 		    <div class="guest_cart fr">
 			<a href="/user/cart/" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">0</div>
+			<div class="goods_count fl" id="show_count">{{ cart_amount }}</div>
 		</div>
         {% endif %}
 	</div>
