--- a/dailyFresh/templates/df_user/cart.html
+++ b/dailyFresh/templates/df_user/cart.html
@@ -1,53 +1,121 @@
 {% extends 'base_top.html' %}
 {% block body %}
-	<div class="total_count">全部商品<em>2</em>件</div>
-	<ul class="cart_list_th clearfix">
-		<li class="col01">商品名称</li>
-		<li class="col02">商品单位</li>
-		<li class="col03">商品价格</li>
-		<li class="col04">数量</li>
-		<li class="col05">小计</li>
-		<li class="col06">操作</li>
-	</ul>
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods012.jpg"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">
-				<a href="javascript:;" class="minus fl">-</a>
-			</div>
-		</li>
-		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
+    {% if cart_list %}
+        <div class="total_count">全部商品<em>2</em>件</div>
+        <ul class="cart_list_th clearfix">
+            <li class="col01">商品名称</li>
+            <li class="col02">商品单位</li>
+            <li class="col03">商品价格</li>
+            <li class="col04">数量</li>
+            <li class="col05">小计</li>
+            <li class="col06">操作</li>
+        </ul>
 
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods003.jpg"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
-	
+        {% for g in cart_list %}
+        <ul class="cart_list_td clearfix" id="{{ g.good_id }}">
+            <li class="col01"><input type="checkbox" name="" checked></li>
+            <li class="col02"><img src="/static/images/{{ g.goods.gpic }}"></li>
+            <li class="col03">{{ g.goods.gtitle }}<br><em>{{ g.goods.gprice }}元/{{ g.goods.gunit }}</em></li>
+            <li class="col04">{{ g.goods.gunit }}</li>
+            <li class="col05">{{ g.goods.gprice }}元</li>
+            <li class="col06">
+                <div class="num_add">
+                    <a href="javascript:;" class="add fl">+</a>
+                    <input type="text" class="num_show fl" value="1">
+                    <a href="javascript:;" class="minus fl">-</a>
+                </div>
+            </li>
+            <li class="col07">{{ g.goods.gprice }}元</li>
+            <li class="col08"><a href="javascript:;">删除</a></li>
+        </ul>
+        {% endfor %}
 
-	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
-		<li class="col02">全选</li>
-		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="place_order.html">去结算</a></li>
-	</ul>
+        <ul class="settlements">
+            <li class="col01"><input type="checkbox" id="check_all" checked=""></li>
+            <li class="col02">全选</li>
+            <li class="col03">合计(不含运费)：<span>¥</span><em id="total">4200.60</em><br>共计<b>20</b>件商品</li>
+            <li class="col04"><a href="place_order.html">去结算</a></li>
+        </ul>
+    {% else %}
+    <h1>购物车空空如也，尽快去采购吧</h1>
+    <a href="/">Go</a>
+    {% endif %}
+    <script>
+     function total() {
+        var total = 0;
+        var amount = 0;
+        $('.col07').each(function () {
+            if($(this).parent().find(':checkbox').prop('checked'))
+                var total1 = parseFloat($(this).text());
+            else
+                total1 = 0;
+          total += total1;
+        });
+        $('.num_show').each(function () {
+            if($(this).parent().parent().parent().find(':checkbox').prop('checked'))
+                var a1 = parseInt($(this).val());
+            else
+                a1 = 0;
+          amount += a1;
+        });
+        $('.settlements').find('em').text(total.toFixed(2));
+        $('.settlements').find('b').text(amount);
+    }
+
+
+    // 全选和取消全选
+    $('#check_all').click(function () {
+        var state = $(this).prop('checked');
+        $(':checkbox:not(#check_all)').prop('checked', state);
+        total();
+    });
+
+     $('#check_all').prop('checked', false).click();
+
+    // 选择
+     function check_box() {
+         $(':checkbox:not(#check_all)').click(function () {
+        if($(':checkbox:not(#check_all):checked').length<$(':checkbox:not(#check_all)').length){
+            $("#check_all").prop('checked', false);
+        }else{
+            $('#check_all').prop('checked', true);
+        }
+        total();
+        });
+     }
+     check_box();
+
+
+    // 数量
+    $('.add').click(function () {
+        txt = $(this).next();
+        $(this).parent().parent().parent().find(':checkbox').prop('checked', false);
+        $(this).parent().parent().parent().find(':checkbox').click()
+        txt.val(parseInt(txt.val())+1).blur();
+    });
+    $('.minus').click(function () {
+        txt = $(this).prev();
+        $(this).parent().parent().parent().find(':checkbox').prop('checked', false);
+        $(this).parent().parent().parent().find(':checkbox').click()
+        txt.val(parseInt(txt.val())-1).blur();
+    });
+    $('.num_show').blur(function () {
+        var count = parseInt($(this).val());
+        if(count>100){
+           alert('单次购买数量不能大于100');
+           count = 100;
+        }
+        if(count<1){
+           alert('请填写正确的商品数量');
+           count = 1;
+        }
+        $(this).val(count);
+        var price = $(this).parent().parent().prev().text();
+        var count = $(this).val();
+        var total0 = parseFloat(price)*parseFloat(count);
+        $(this).parent().parent().next().text(total0.toFixed(2)+"元");
+        total();
+    });
+
+    </script>
 {% endblock body %}
