--- a/dailyFresh/templates/df_goods/detail.html
+++ b/dailyFresh/templates/df_goods/detail.html
@@ -29,7 +29,7 @@
 			<div class="total">总价：<em>{{ g.gprice }}元</em></div>
 			<div class="operate_btn">
 				<a href="javascript:;" class="buy_btn">立即购买</a>
-				<a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>				
+				<a href="javascript:;" class="add_cart" id="add_cart" val="{{ g.id }}">加入购物车</a>
 			</div>
 		</div>
 	</div>
@@ -77,16 +77,17 @@
 
 		$('#add_cart').click(function(){
             $(".add_jump").css({'left':$add_y+80,'top':$add_x+10,'display':'block'})
-            var gnum = parseInt($('#show_count').html().toString());
 			$(".add_jump").stop().animate({
 				'left': $to_y+7,
 				'top': $to_x+7},
 				"fast", function() {
 					$(".add_jump").fadeOut('fast',function(){
-						$('#show_count').html(gnum+1);
 					});
 
 			});
+			$.get('/cart/add'+$(this).attr('val')+'_'+$('input.num_show').val()+'/', function (data) {
+			    $('#show_count').text(data['count']);
+            });
 		});
         $("a.add").click(function(){
            var num = parseInt($("input.num_show").val());
