--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -57,7 +57,7 @@
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		    <div class="guest_cart fr">
-			<a href="/user/cart/" class="cart_name fl">我的购物车</a>
+			<a href="/cart/" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">{{ cart_amount }}</div>
 		</div>
         {% endif %}
