--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -34,7 +34,7 @@
 					<span>|</span>
 					<a href="/user/info">用户中心</a>
 					<span>|</span>
-					<a href="/user/cart">我的购物车</a>
+					<a href="/cart">我的购物车</a>
 					<span>|</span>
 					<a href="/user/order">我的订单</a>
 				</div>
