--- a/dailyFresh/templates/df_cart/cart.html
+++ b/dailyFresh/templates/df_cart/cart.html
@@ -34,7 +34,7 @@
             <li class="col01"><input type="checkbox" id="check_all" checked=""></li>
             <li class="col02">全选</li>
             <li class="col03">合计(不含运费)：<span>¥</span><em id="total">4200.60</em><br>共计<b>20</b>件商品</li>
-            <li class="col04"><a href="place_order.html">去结算</a></li>
+            <li class="col04"><a href="javascript:;" id="state">去结算</a></li>
         </ul>
     {% else %}
     <h1>购物车空空如也，尽快去采购吧</h1>
@@ -138,7 +138,7 @@
 
     // 删除购物车商品
     $('.del_cart').click(function () {
-        del = confirm('确认删除该商品吗？');
+        var del = confirm('确认删除该商品吗？');
         if(del){
             $.get('/cart/del_cart/'+$(this).attr('val')+'/', function (data) {
             if(data['ok']){
@@ -150,5 +150,15 @@
 
     });
 
+    // 结算
+    $('#state').click(function () {
+        var url = '/order/';
+        var pat = '?';
+        $(':checked').parents('.cart_list_td').each(function () {
+            pat = pat + 'cart_id=' + $(this).attr('id') + '&';
+        });
+        url = url + pat;
+        window.location.href = url;
+    });
     </script>
 {% endblock body %}
