--- a/dailyFresh/templates/base_top.html
+++ b/dailyFresh/templates/base_top.html
@@ -1,17 +1,4 @@
 {% extends 'base_foot.html' %}
-{% block judge_login %}
-{#    <script>#}
-{#    $(document).ready(function () {#}
-{#        if($.session.user_name){#}
-{#            $(".header .fr .fl:nth-child(1)").removeClass("login_info").addClass("login_btn");#}
-{#            $(".header .fr .fl:nth-child(2)").removeClass("login_btn").addClass("login_info");#}
-{#        }else{#}
-{#            $(".header .fr .fl:nth-child(2)").removeClass("login_info").addClass("login_btn");#}
-{#            $(".header .fr .fl:nth-child(1)").removeClass("login_btn").addClass("login_info");#}
-{#        }#}
-{#    });#}
-{#    </script>#}
-{% endblock judge_login %}
 {% block top %}
     <div class="header_con">
 		<div class="header">
@@ -45,7 +32,7 @@
 	<div class="search_bar clearfix">
 		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
         {% if page_name == 1 %}
-		    <div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;{{ title }}</div>
+		    <div class="sub_page_name fl">|{{ title }}</div>
 		    <div class="search_con fr">
 			    <input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			    <input type="button" class="input_btn fr" name="" value="搜索">
@@ -62,4 +49,12 @@
 		</div>
         {% endif %}
 	</div>
+    <script>
+    $('.input_btn').click(function () {
+        var url = location.pathname;
+        var s = $(this).prev().val();
+        url = url +"?q="+s;
+        location.href = url;
+    });
+    </script>
 {% endblock top %}
