--- a/dailyFresh/templates/df_user/user_center_order.html
+++ b/dailyFresh/templates/df_user/user_center_order.html
@@ -2,73 +2,53 @@
 {% block right_content %}
     <div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
+        {% for order in order_list %}
 				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
-				</ul>
-
+					<li class="col01">{{ order.odate }}</li>
+					<li class="col02">订单号：{{ order.oid }}</li>
+                    {% if order.oStatus == 1 %}
+					<li class="col02 stress">未支付</li>
+                    {% elif order.oStatus == 0 %}
+                    <li class="col02 stress">已支付</li>
+                    {% endif %}
+                </ul>
 				<table class="order_list_table w980">
 					<tbody>
 						<tr>
 							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
+                                {% for good in order.detail %}
+								<ul class="order_goods_list clearfix">
+									<li class="col01"><img src="/static/images/{{ good.good.gpic }}"></li>
+									<li class="col02">{{ good.good.gtitle }}<em>{{ good.good.gprice }}元/{{ good.good.gunit }}</em></li>
+									<li class="col03">{{ good.count }}</li>
+									<li class="col04">11-80元</li>
 								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
+                                {% endfor %}
 							</td>
-							<td width="15%">33.60元</td>
+							<td width="15%">{{ order.ototal }}元</td>
 							<td width="15%">待付款</td>
 							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
 						</tr>
 					</tbody>
 				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">已付款</td>
-							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
-						</tr>
-					</tbody>
-				</table>
-
+        {% endfor %}
 				<div class="pagenation">
-					<a href="#"><上一页</a>
-					<a href="#" class="active">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">下一页></a>
+{#					<a href="#"><上一页</a>#}
+                    {% for pindex in plist %}
+                    {% if index == pindex %}
+                        <a href="/user/order/{{ pindex }}" class="active">{{ pindex }}</a>
+                    {% else %}
+                    <a href="/user/order/{{ pindex }}">{{ pindex }}</a>
+                    {% endif %}
+                    {% endfor %}
+{#					<a href="#" class="active">1</a>#}
+{#					<a href="#">下一页></a>#}
 				</div>
+        <script>
+            $(function () {
+                {#var url = location.pathname;#}
+                {#$("[href='"+url+"']").addClass('active');#}
+            });
+        </script>
 		</div>
 {% endblock right_content %}
